Bug 338596 - objectBoundingBox value partially ignored in patternUnits. r=tor,sr=roc